--- a/planner/templates/planner/base.html
+++ b/planner/templates/planner/base.html
@@ -36,7 +36,7 @@
       </nav>
     </header>
 
-    <!-- flash messages – zobrazí se po úspěšné nebo chybové akci -->
+    <!-- flash messages -->
     {% if messages %}
       <div style="margin: 12px 0;">
         {% for message in messages %}
